--- a/SocialNetworkHarvester/templates/snh/index.html
+++ b/SocialNetworkHarvester/templates/snh/index.html
@@ -39,7 +39,7 @@
                         <td>{{ th.remaining_hits }}</td>
                     </tr>
                     <tr>
-                        <td>Token hourly limit</td>
+                        <td>Token 15-minutes limit</td>
                         <td>{{ th.hourly_limit }}</td>
                     </tr>                    <tr>
                         <td>Token reset time</td>
