--- a/SocialNetworkHarvester/templates/snh/twitter_detail.html
+++ b/SocialNetworkHarvester/templates/snh/twitter_detail.html
@@ -104,6 +104,7 @@
     </tbody>
 
 </table>
+
 <h3>Statuses</h3>
 <div  id='status_chart' style='margin:0 auto; width: 1024px; height: 240px;'></div>
 <table id="status_table" class="pretty">
@@ -118,6 +119,16 @@
         </tr>
     </thead>
     <tbody>
+        {% for status, name, href in status_list %}
+        <tr>
+            <td>{{ status.created_at }}</td>
+            <td>{{ status.pk }}</td>
+            <td>{{ status.text }}</td>
+            <td>{{ status.retweet_count }}</td>
+            <td>{{ status.retweeted }}</td>
+            <td><a href="{{ href }}">{{ name }}</a></td>
+        </tr>
+        {% endfor %}
     </tbody>
 </table>
 
@@ -134,6 +145,15 @@
         </tr>
     </thead>
     <tbody>
+        {% for status in mention_list %}
+        <tr>
+            <td>{{ status.created_at }}</td>
+            <td>{{ status.pk }}</td>
+            <td>{{ status.user }}</td>
+            <td>{{ status.text }}</td>
+            <td>{{ status.source }}</td>
+        </tr>
+        {% endfor %}
     </tbody>
 </table>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
