--- a/SocialNetworkHarvester/templates/snh/test_token.html
+++ b/SocialNetworkHarvester/templates/snh/test_token.html
@@ -4,21 +4,96 @@
 {% load facebook %}
 {% facebook_init %}
 {% endfacebook %}
-<table>
-<tbody>
-<tr>
-    <td>Utilisateur utilisé pour la collecte:</td>
-    <td>{{ fanu.first_name }} {{ fanu.last_name }}</td>
-</tr>
-<tr>
-    <td>Le token expire le</td>
-    <td>{{ fanu.oauth_token.expires_at }}</td>
-</tr>
-<tr>
-    <td>Le token</td>
-    <td>{{ fanu.oauth_token.token }}</td>
-</tr>
-</tbody>
-</table>
-<a href="/request_fb_token">Demander un nouveau token</a>
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>Facebook test</title>
+    <link href="">
+    <meta charset="UTF-8">
+    </head>
+    <body>
+        <script>
+          function statusChangeCallback(response) {
+            if (response.status === 'connected') {
+              OnLogin();
+            } else if (response.status === 'not_authorized') {
+              document.getElementById('status').innerHTML = 'Please log ' +
+                'into this app.';
+            } else {
+              document.getElementById('status').innerHTML = 'Please log ' +
+                'into Facebook.';
+            }
+          }
+
+          function checkLoginState() {
+            FB.getLoginStatus(function(response) {
+              statusChangeCallback(response);
+            });
+          }
+
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : '{{ appId }}',
+              cookie     : true,
+              xfbml      : true,  // parse social plugins on this page
+              version    : 'v2.3'
+            });
+            FB.getLoginStatus(function(response) {
+              statusChangeCallback(response);
+            });
+          };
+          (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));
+
+        function OnLogin() {
+          document.getElementById('status').innerHTML = "Logged into Facebook as:";
+          document.getElementById('loginButton').style.display = 'None';
+          FB.api("me", function(response){
+            document.getElementById('me').innerHTML = '<b>'+response.first_name+' '+response.last_name+'</b>';
+          });
+          document.getElementById('logoutButton').style.display = 'inline';
+          accessToken = FB.getAuthResponse()['accessToken']
+          document.getElementById('token').value = accessToken;
+          $.post("/fb_update_client_token", {token: accessToken})
+        }
+
+        function logOut(){
+          FB.logout(function(response){
+            location.reload(); 
+          });
+        }
+        </script>
+        <br><br>
+        <center>
+            <fb:login-button 
+            id="loginButton"
+            scope=
+            "public_profile,
+            email,
+            user_friends,
+            read_stream"
+            onlogin="checkLoginState();">
+            	<div id="loginButtonInner">Log in</div>
+            </fb:login-button>
+            <div id="status">
+            </div>
+            <div id="me">
+            </div>
+            <br>
+            OAuth Token:
+            <textarea id='token'></textarea>
+            <br>
+            <a href='#' onclick='logOut()' id='logoutButton' style='display: none;'>
+              <div id="logoutButtonInner">Log out</div>
+            </fb:logout-button>
+
+        </center>
+    </body>
+</html>
+
 {% endblock %}
