--- a/SocialNetworkHarvester/templates/snh/twitter_detail.html
+++ b/SocialNetworkHarvester/templates/snh/twitter_detail.html
@@ -86,6 +86,20 @@
     </tr>
     </thead>
     <tbody>
+        <td>{{user.name}}</td>
+        <td>{{user.screen_name}}</td>
+        <td>{{user.description}}</td>
+        <td>{{user.followers_count}}</td>
+        <td>{{user.friends_count}}</td>
+        <td>{{user.statuses_count}}</td>
+        <td>{{user.listed_count}}</td>
+        <td>{{user.url}}</td>
+        <td>{{user.location}}</td>
+        <td>{{user.time_zone}}</td>
+        <td>{{user.utc_offset}}</td>
+        <td>{{user.protected}}</td>
+        <td>{{user.lang}}</td>
+    </tr>
     </tbody>
 
 </table>
