--- a/SocialNetworkHarvester/templates/snh/twitter_status.html
+++ b/SocialNetworkHarvester/templates/snh/twitter_status.html
@@ -42,7 +42,7 @@
     <td>{{ twuser.friends_count }}</td>
     <td>{{ twuser.statuses_count }}</td>
     <td>{{ twuser.listed_count }}</td>
-    <td></td>
+    <td>{{ twuser.url }}</td>
     <td>{{ twuser.location }}</td>
     <td>{{ twuser.time_zone }}</td>
     <td>{{ twuser.utc_offset }}</td>
