--- a/SocialNetworkHarvester/templates/snh/index.html
+++ b/SocialNetworkHarvester/templates/snh/index.html
@@ -35,11 +35,11 @@
                         <td>{{ th.current_harvested_user }}</td>
                     </tr>
                     <tr>
-                        <td>Token remaining hits</td>
-                        <td>{{ th.remaining_hits }}</td>
+                        <td>Remaining hits (search)(timeline)(user)</td>
+                        <td>({{ th.remaining_search_hits }})({{ th.remaining_user_timeline_hits }})({{ th.remaining_user_lookup_hits }})</td>
                     </tr>
                     <tr>
-                        <td>Token 15-minutes limit</td>
+                        <td>15-minutes hits limits</td>
                         <td>{{ th.hourly_limit }}</td>
                     </tr>                    <tr>
                         <td>Token reset time</td>
