--- a/SocialNetworkHarvester/templates/snh/index.html
+++ b/SocialNetworkHarvester/templates/snh/index.html
@@ -5,10 +5,10 @@
 
 <table width="100%">
     <thead>
-        <th>Twitter</th>
-        <th>Facebook</th>
-        <th>Dailymotion</th>
-        <th>Youtube</th>
+        <th>Twitter (<a href="/event_logs/twitterlog">log-></a>) </th>
+        <th>Facebook (<a href="/event_logs/facebooklog">log-></a>)</th>
+        <th>Dailymotion (<a href="/event_logs/dailymotionlog">log-></a>)</th>
+        <th>Youtube (<a href="/event_logs/youtubelog">log-></a>)</th>
     </thead>
     <tbody>
         <td>
@@ -96,6 +96,10 @@
                     <tr>
                         <td>Current harvest start time</td>
                         <td>{{ th.current_harvest_start_time }}</td>
+                    </tr>
+                    <tr>
+                        <td>Update "Likes"</td>
+                        <td>{{ th.update_likes }}</td>
                     </tr>
                     <!--
                     <tr>
