--- a/SocialNetworkHarvester/templates/snh/getLogger.html
+++ b/SocialNetworkHarvester/templates/snh/getLogger.html
@@ -32,5 +32,5 @@
 {% block content %}
     {% autoescape off %}{{ logfile }}{% endautoescape %}
     <a style='bottom:0px;' href='' name='bot'></a>
-    <div style='position:fixed;right:21px;top:80px;'><a href='#bot'>jump to bottom</a></div>
+    <div style='position:fixed;right:21px;bottom:20px;'><a href='#bot'>jump to bottom</a></div>
 {% endblock %}
