Youtube API v3 update
Updated Youtubech to work with google API Youtube V3. Video download
with captions supported thanks to https://rg3.github.io/youtube-dl/

--- a/SocialNetworkHarvester/templates/snh/getLogger.html
+++ b/SocialNetworkHarvester/templates/snh/getLogger.html
@@ -32,5 +32,5 @@
 {% block content %}
     {% autoescape off %}{{ logfile }}{% endautoescape %}
     <a style='bottom:0px;' href='' name='bot'></a>
-    <div style='position:fixed;right:21px;bottom:20px;'><a href='#bot'>jump to bottom</a></div>
+    <div style='position:fixed;right:21px;bottom:20px;background-color:#FFF;padding:2px'><a href='#bot'><b>jump to bottom</b></a></div>
 {% endblock %}
