--- a/SocialNetworkHarvester/templates/snh/youtube.html
+++ b/SocialNetworkHarvester/templates/snh/youtube.html
@@ -39,7 +39,7 @@
                             //9 : u'company',
                             //10 : u'last_web_access',
                             //11 : u'subscriber_count',
-                            //12 : u'video_watch_count',
+                            //12 : u'video_count',
                             //13 : u'view_count',
                 },
                 "oTableTools": {
@@ -80,7 +80,7 @@
         <th>company</th>
         <th>last web access</th>
         <th>subscriber count</th>
-        <th>video watch count</th>
+        <th>video count</th>
         <th>view count</th>
     </tr>
     </thead>
