--- a/SocialNetworkHarvester/templates/snh/youtube_detail.html
+++ b/SocialNetworkHarvester/templates/snh/youtube_detail.html
@@ -110,7 +110,7 @@
         <th>company</th>
         <th>last web access</th>
         <th>subscriber count</th>
-        <th>video watch count</th>
+        <th>video count</th>
         <th>view count</th>
 
     </tr>
@@ -129,8 +129,8 @@
             <td>{{ user.location|default_if_none:"0" }}</td>
             <td>{{ user.company|default_if_none:"0" }}</td>
             <td>{{ user.last_web_access|default_if_none:"0" }}</td>
-            <td>{{ user.subscribers_count|default_if_none:"0" }}</td>
-            <td>{{ user.video_watch_count|default_if_none:"0" }}</td>
+            <td>{{ user.subscriber_count|default_if_none:"0" }}</td>
+            <td>{{ user.video_count|default_if_none:"0" }}</td>
             <td>{{ user.view_count|default_if_none:"0" }}</td>
         </a>
     </tr>
