--- a/SocialNetworkHarvester/templates/snh/snh_base.html
+++ b/SocialNetworkHarvester/templates/snh/snh_base.html
@@ -61,6 +61,11 @@
     {% block footer %}
     <div id="footer">
     <p><a href="https://github.com/unclesaam/Social-Network-Harvester">Social Network Harverster v 0.2</a></p>
+    <p>Legacy SNHs: 
+        <span><a href='http://qc.aspira.ulaval.ca'>Quebec 2014</span><span> | </span>
+        <span><a href='http://fr.aspira.ulaval.ca'>France 2014</span><span> | </span>
+        <span><a href='http://frdebat.aspira.ulaval.ca'>France-Débat 2014</span>
+    </p>
     </div>{% endblock %}
 </div>
 <!-- END Container -->
