Changed the hashtag scrapping procedure to use Twitter's HTML frontpage as a search engine

--- a/SocialNetworkHarvester/templates/snh/snh_base.html
+++ b/SocialNetworkHarvester/templates/snh/snh_base.html
@@ -64,7 +64,7 @@
     <p>Legacy SNHs: 
         <span><a href='http://qc.aspira.ulaval.ca'>Quebec 2014</span><span> | </span>
         <span><a href='http://fr.aspira.ulaval.ca'>France 2014</span><span> | </span>
-        <span><a href='http://frdebat.aspira.ulaval.ca'>France-Débat 2014</span>
+        <span><a href='http://francedebat.aspira.ulaval.ca'>France-Débat 2014</span>
     </p>
     </div>{% endblock %}
 </div>
