--- a/SocialNetworkHarvester/templates/snh/twitter_search_detail.html
+++ b/SocialNetworkHarvester/templates/snh/twitter_search_detail.html
@@ -2,33 +2,64 @@
 {% block extrahead %}
 <script type="text/javascript" charset="utf-8">
 	$(document).ready(function() {
-		var oTable2 = $('#search_table').dataTable(
-            {
-                "iDisplayLength": iDisplayLength, 
-                "sPaginationType": sPaginationType,
-                "sDom": sDom,
-                "aaSorting": aaSorting,
-                "bAutoWidth": bAutoWidth,
-		        "bServerSide": bServerSide, 
-		        "sAjaxSource": "{% url snh.views.get_tw_searchdetail_list 'web' search.pmk_id  %}",
-                "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
-                    $('td:eq(1)', nRow).html( '<a href="/tw_status_detail/{{ harvester_id }}/'+aData[1]+'">'+aData[1]+'</a>' );
-                    $('td:eq(2)', nRow).html( '<a href="/tw_user_detail/{{ harvester_id }}/'+aData[2]+'">'+aData[2]+'</a>' );
-                },
-                "aoColumnDefs": [ 
-                    { 
-                        "bSearchable": false, "aTargets": [ 0 ] 
-                    }
-                ],
-                "oTableTools": {
-                  "aButtons": [ {
-                    "sExtends": "download",
-                    "sUrl": "{% url snh.views.get_tw_searchdetail_list 'csv' search.pmk_id  %}",
-                  } ]
-                },
-            });
+		var oTable2 = $('#search_table').dataTable({
+            "iDisplayLength": iDisplayLength, 
+            "sPaginationType": sPaginationType,
+            "sDom": sDom,
+            "aaSorting": aaSorting,
+            "bAutoWidth": bAutoWidth,
+	        "bServerSide": bServerSide, 
+	        "sAjaxSource": "{% url snh.views.get_tw_searchdetail_list 'web' search.pmk_id  %}",
+            "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
+                $('td:eq(1)', nRow).html( '<a href="/tw_status_detail/{{ harvester_id }}/'+aData[1]+'">'+aData[1]+'</a>' );
+                $('td:eq(2)', nRow).html( '<a href="/tw_user_detail/{{ harvester_id }}/'+aData[2]+'">'+aData[2]+'</a>' );
+            },
+            "aoColumnDefs": [ 
+                { 
+                    "bSearchable": false, "aTargets": [ 0 ] 
+                }
+            ],
+            "oTableTools": {
+              "aButtons": [ {
+                "sExtends": "download",
+                "sUrl": "{% url snh.views.get_tw_searchdetail_list 'csv' search.pmk_id  %}",
+              } ]
+            },
+        });
 
-	} );
+        $('#ToolTables_search_table_0').unbind('click' )
+        $('#ToolTables_search_table_0').click(function(){
+            document.getElementById('centerPopupInner').innerHTML = '\
+                <br><center>Please select the fields to include:</center><br><hr>\
+                <form action="/dwld_tw_status_csv" method="GET">\
+                    <table>\
+                        <tr><td><input type="checkbox" id="checkAll"></td><td><b> Select/deselect all</b></td></tr>\
+                        {% for fieldlist in status_fields %}\
+                        <tr>\
+                            {% for field in fieldlist %}\
+                            <td><input type="checkbox" name="fields" value={{ field }}></td><td> {{ field }}</td>\
+                            {% endfor %}\
+                        </tr>\
+                        {% endfor %}\
+                    </table>\
+                    <input type="hidden" name="search_id" value="{{ search.pk }}">\
+                    <input type="submit" id="submitButton" value="submit">\
+                </form>\
+            ';
+            $('#checkAll').click(function(event) {   
+                var checkBox = this
+                $(':checkbox').each(function() {
+                    this.checked = checkBox.checked;                        
+                });
+            });
+            $('#submitButton').click(function(){
+                document.getElementById('centerPopupOutter').style.display = 'None';
+            })
+            document.getElementById('centerPopupOutter').style.display = 'inline-block';
+        })
+	});
+
+
 </script>
 {% endblock %}
 {% block submenu %}
@@ -43,12 +74,9 @@
 {% endblock %}
 
 {% block content %}
+
 <h3>Search results for {{ search.term }} </h3> 
-<span>Download raw JSON data <a href='/get_tw_status_json?search_id={{ search.pmk_id }}'>here</a></span>
-
-
-
-
+<span>Download raw JSON data <a id='jsonButton' href='/get_tw_status_json?search_id={{ search.pmk_id }}'>here</a></span>
 <table id="search_table" class="pretty">
     <thead>
         <tr>
@@ -61,13 +89,13 @@
     </thead>
     <tbody>
         {% for status, appName, href in status_list %}
-        <tr>
-            <td>{{ status.created_at }}</td>
-            <td><a href="/tw_status_detail/{{ harvester_id }}/{{ status.fid }}/">{{ status.fid }}</a></td>
-            <td><a href="/tw_user_detail/{{ harvester_id }}/{{ status.user }}">{{ status.user }}</a></td>
-            <td>{{ status.text }}</td>
-            <td><a href="{{ href }}">{{ appName }}</a></td>
-        </tr>
+            <tr>
+                <td>{{ status.created_at }}</td>
+                <td><a href="/tw_status_detail/{{ harvester_id }}/{{ status.fid }}/">{{ status.fid }}</a></td>
+                <td><a href="/tw_user_detail/{{ harvester_id }}/{{ status.user }}">{{ status.user }}</a></td>
+                <td>{{ status.text }}</td>
+                <td><a href="{{ href }}">{{ appName }}</a></td>
+            </tr>
         {% endfor %}
     </tbody>
 </table>
